--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1.0" name="viewport">
   <link href="<%= BASE_URL %>favicon.ico" rel="icon">
-  <title>Wos geat online?</title>
+  <title>🤔 Wos geat online?</title>
 
   <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
 </head>
